--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es2020",
 		"module": "commonjs",
-		"lib": ["ES2023"],
+		"lib": ["es2020"],
 		"noEmit": true,
 		"strict": true,
 		"moduleResolution": "node",
