--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "es2020",
+		"target": "ES2021",
 		"module": "commonjs",
-		"lib": ["es2020"],
+		"lib": ["ES2021"],
 		"noEmit": true,
 		"strict": true,
 		"moduleResolution": "node",
